调整 老黄历的排版

--- a/source/almanac/index.html
+++ b/source/almanac/index.html
@@ -4,8 +4,9 @@ comments: false
 title: 程序员老黄历
 ---
 
+一个广为流传的程序员老黄历，首发于runjs.cn，作者没有留下任何声明。
 <link rel="stylesheet" href="index.css">
-<div class="date_container">
+<div class="date_container" style="margin-top: 40px;">
   <div class="title">
     程序员老黄历
     <sup>beta</sup>
