--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <img src="loading.svg" alt="baiyezi.com">
+      <div style="width:100%;text-align:center;">
+        <img src="loading.svg" alt="baiyezi.com">
+      </div>
     </div>
     <!--
       This HTML file is a template.
