feat: fontawesome放弃按需引用，修改为link导入，以便图标可动态配置

--- a/public/index.html
+++ b/public/index.html
@@ -65,12 +65,15 @@
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
     <title></title>
+    <link href="/fa/css/fontawesome.min.css" rel="stylesheet" />
+    <link href="/fa/css/solid.min.css" rel="stylesheet" />
+    <link href="/fa/css/regular.min.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       <div style="width:100%;text-align:center;">
-        <img src="loading.svg" alt="baiyezi.com">
+        <img src="loading.svg" alt="baiyezi.com" />
       </div>
     </div>
     <!--
