--- a/public/index.html
+++ b/public/index.html
@@ -68,12 +68,100 @@
     <link href="/fa/css/fontawesome.min.css" rel="stylesheet" />
     <link href="/fa/css/solid.min.css" rel="stylesheet" />
     <link href="/fa/css/regular.min.css" rel="stylesheet" />
+    <style>
+      .root-loading {
+        font-family: 'Franklin Gothic Medium';
+        font-size: 32px;
+        display: flex;
+        justify-content: center;
+        width: 300px;
+        margin: 0 auto;
+        padding-top: 200px;
+      }
+      .root-loading b {
+        display: block;
+        padding: 0 1px;
+        animation: spin 1.4s infinite ease-in-out;
+      }
+      .root-loading .bai {
+        color: darkcyan;
+      }
+      .root-loading .ye {
+        color: #ccc;
+      }
+      .root-loading .zi {
+        color: lightslategray;
+      }
+      .root-loading .dot {
+        color: darkred;
+      }
+      .root-loading .com {
+        color: #ddd;
+      }
+      .root-loading b:nth-child(1) {
+        animation-delay: 0.2s;
+      }
+      .root-loading b:nth-child(2) {
+        animation-delay: 0.3s;
+      }
+      .root-loading b:nth-child(3) {
+        animation-delay: 0.4s;
+      }
+      .root-loading b:nth-child(4) {
+        animation-delay: 0.5s;
+      }
+      .root-loading b:nth-child(5) {
+        animation-delay: 0.6s;
+      }
+      .root-loading b:nth-child(6) {
+        animation-delay: 0.7s;
+      }
+      .root-loading b:nth-child(7) {
+        animation-delay: 0.8s;
+      }
+      .root-loading b:nth-child(8) {
+        animation-delay: 0.9s;
+      }
+      .root-loading b:nth-child(9) {
+        animation-delay: 1s;
+      }
+      .root-loading b:nth-child(10) {
+        animation-delay: 1.1s;
+      }
+      .root-loading b:nth-child(11) {
+        animation-delay: 1.2s;
+      }
+      @keyframes spin {
+        0% {
+          transform: translateY(0px);
+        }
+        15% {
+          transform: translateY(-20px);
+        }
+        30% {
+          transform: translateY(0px);
+        }
+        100% {
+          transform: translateY(0px);
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <div style="width:100%;text-align:center;">
-        <img src="loading.svg" alt="baiyezi.com" />
+      <div class="root-loading">
+        <b class="bai">B</b>
+        <b class="bai">A</b>
+        <b class="bai">I</b>
+        <b class="ye">Y</b>
+        <b class="ye">E</b>
+        <b class="zi">Z</b>
+        <b class="zi">I</b>
+        <b class="dot">.</b>
+        <b class="com">C</b>
+        <b class="com">O</b>
+        <b class="com">M</b>
       </div>
     </div>
     <!--
