--- a/public/index.html
+++ b/public/index.html
@@ -100,36 +100,47 @@
       }
       .root-loading b:nth-child(1) {
         animation-delay: 0.2s;
+        -webkit-animation-delay: 0.2s;
       }
       .root-loading b:nth-child(2) {
         animation-delay: 0.3s;
+        -webkit-animation-delay: 0.3s;
       }
       .root-loading b:nth-child(3) {
         animation-delay: 0.4s;
+        -webkit-animation-delay: 0.4s;
       }
       .root-loading b:nth-child(4) {
         animation-delay: 0.5s;
+        -webkit-animation-delay: 0.5s;
       }
       .root-loading b:nth-child(5) {
         animation-delay: 0.6s;
+        -webkit-animation-delay: 0.6s;
       }
       .root-loading b:nth-child(6) {
         animation-delay: 0.7s;
+        -webkit-animation-delay: 0.7s;
       }
       .root-loading b:nth-child(7) {
         animation-delay: 0.8s;
+        -webkit-animation-delay: 0.8s;
       }
       .root-loading b:nth-child(8) {
         animation-delay: 0.9s;
+        -webkit-animation-delay: 0.9s;
       }
       .root-loading b:nth-child(9) {
         animation-delay: 1s;
+        -webkit-animation-delay: 1s;
       }
       .root-loading b:nth-child(10) {
         animation-delay: 1.1s;
+        -webkit-animation-delay: 1.1s;
       }
       .root-loading b:nth-child(11) {
         animation-delay: 1.2s;
+        -webkit-animation-delay: 1.2s;
       }
       @keyframes spin {
         0% {
