feat: updated index.html

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
     <link href="/fa/css/regular.min.css" rel="stylesheet" />
     <style>
       .root-loading {
-        font-family: 'Franklin Gothic Medium';
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-size: 32px;
         display: flex;
         justify-content: center;
